# HistDataScrapper

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
src/data/: handler.rs  mod.rs  pairs.rs
src/utils/: browser.rs  driver.rs  mod.rs  terminal.rs  utils.rs
